--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
                             <!-- <i class="fas fa-tooth"></i> -->
-                            <img src="./assets/images/Dental-Implant.jpeg" alt="" style="width: 200px;">
+                            <img src="./assets/images/teeethh.png" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Dental Implant</a></h5>
@@ -251,7 +251,7 @@
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
                             <!-- <i class="fas fa-wheelchair"></i> -->
-                            <img src="./assets/images/pediatricdentalcare.jpg" alt="" style="width: 200px;">
+                            <img src="./assets/images/PEDIA.png" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Pediatric Dental Care</a></h5>
@@ -264,7 +264,7 @@
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
                             <!-- <i class="fas fa-user-md"></i> -->
-                            <img src="./assets/images/smile.jpg" alt="" style="width: 200px;">
+                            <img src="./assets/images/smilling.png" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Smile Designing</a></h5>
@@ -276,7 +276,7 @@
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
                             <!-- <i class="fas fa-teeth-open"></i> -->
-                            <img src="./assets/images/OPC.jpeg" alt="" style="width: 200px;">
+                            <img src="./assets/images/OPC22.png" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Orthopantomogram</a></h5>
@@ -288,7 +288,7 @@
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
                             <!-- <i class="fas fa-crutch"></i> -->
-                            <img src="./assets/images/teeth-whitening.jpg" alt="" style="width: 200px;">
+                            <img src="./assets/images/Teethwhitening222222.png" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Teeth Whitening</a></h5>
@@ -301,7 +301,7 @@
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
                             <!-- <i class="fas fa-teeth"></i> -->
-                            <img src="./assets/images/Full-or-Partial-Denture.jpg" alt="" style="width: 200px;">
+                            <img src="./assets/images/FAPD.png" alt="" style="width: 200px;">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Full And Partial Dentures</a></h5>
@@ -329,7 +329,7 @@
                 <div class="owl-three owl-carousel owl-theme">
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/dental-treatment_Root-Canal-Treatment.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/ROOT.png"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
@@ -343,7 +343,7 @@
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/Dental-Implant.jpeg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/teeethh.png"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
@@ -357,7 +357,7 @@
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/Phase.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/2ND PHASE.png"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
@@ -371,7 +371,7 @@
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/featured_pregnancy.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/PGUIDANCE.png"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
@@ -385,7 +385,7 @@
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/smile.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/smilling.png"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
@@ -399,7 +399,7 @@
                     </div>
                     <div class="item">
                         <div class="content-left-sec">
-                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/dental7.jpg"
+                            <a class="blog-link d-block zoom-image" href="#url"><img src="assets/images/dmanage.png"
                                     class="img-fluid scale-image" alt=""></a>
                             <div class="blog-info">
                                 <a href="#url">
@@ -558,7 +558,7 @@
                                         patient receives personalized and attentive attention throughout their visit.
                                     </p>
                                     <div class="d-flex align-items-center justify-content-between mt-lg-4 mt-5">
-                                        <h5 class="text-blog-e">Jan  30, 2024</h5>
+                                        <h5 class="text-blog-e">Jan30, 2024</h5>
                                         <a href="#blog" class="blog-icon-e"><i class="fas fa-plus"></i></a>
                                     </div>
                                 </div>
