--- a/services.html
+++ b/services.html
@@ -232,7 +232,7 @@
                     <div class="card">
                         <div class="card-header p-0 position-relative border-0">
                             <a href="services.html">
-                                <img class="d-block img-responsive" src="assets/images/dental-treatment_Root-Canal-Treatment.jpg" alt="card-image">
+                                <img class="d-block img-responsive" src="assets/images/ROOT.png" alt="card-image">
                             </a>
                         </div>
                         <div class="card-body service-details">
@@ -244,7 +244,7 @@
                     <div class="card">
                         <div class="card-header p-0 position-relative border-0">
                             <a href="services.html">
-                                <img class="d-block img-responsive" src="assets/images/fixed-teeth-crown-and-bridges-treatment.png" alt="card-image">
+                                <img class="d-block img-responsive" src="assets/images/Ftgrow.png" alt="card-image">
                             </a>
                         </div>
                         <div class="card-body service-details">
@@ -256,7 +256,7 @@
                     <div class="card">
                         <div class="card-header p-0 position-relative border-0">
                             <a href="services.html">
-                                <img class="d-block img-responsive" src="assets/images/Full-or-Partial-Denture.jpg" alt="card-image">
+                                <img class="d-block img-responsive" src="assets/images/FAPD.png" alt="card-image">
                             </a>
                         </div>
                         <div class="card-body service-details">
@@ -268,7 +268,7 @@
                     <div class="card">
                         <div class="card-header p-0 position-relative border-0">
                             <a href="services.html">
-                                <img class="d-block img-responsive" src="assets/images/Dental-Implant.jpeg" alt="card-image">
+                                <img class="d-block img-responsive" src="assets/images/teeethh.png" alt="card-image">
                             </a>
                         </div>
                         <div class="card-body service-details">
@@ -280,7 +280,7 @@
                     <div class="card">
                         <div class="card-header p-0 position-relative border-0">
                             <a href="services.html">
-                                <img class="d-block img-responsive" src="assets/images/scale-and-polish.png" alt="card-image">
+                                <img class="d-block img-responsive" src="assets/images/scalepolish.png" alt="card-image">
                             </a>
                         </div>
                         <div class="card-body service-details">
@@ -292,7 +292,7 @@
                     <div class="card">
                         <div class="card-header p-0 position-relative border-0">
                             <a href="services.html">
-                                <img class="d-block img-responsive" src="assets/images/teeth-whitening.jpg" alt="card-image">
+                                <img class="d-block img-responsive" src="assets/images/Teethwhitening222222.png" alt="card-image">
                             </a>
                         </div>
                         <div class="card-body service-details">
@@ -304,7 +304,7 @@
                     <div class="card">
                         <div class="card-header p-0 position-relative border-0">
                             <a href="services.html">
-                                <img class="d-block img-responsive" src="assets/images/pediatricdentalcare.jpg" alt="card-image">
+                                <img class="d-block img-responsive" src="assets/images/PEDIA.png" alt="card-image">
                             </a>
                         </div>
                         <div class="card-body service-details">
@@ -316,7 +316,7 @@
                     <div class="card">
                         <div class="card-header p-0 position-relative border-0">
                             <a href="services.html">
-                                <img class="d-block img-responsive" src="assets/images/featured_pregnancy.jpg" alt="card-image">
+                                <img class="d-block img-responsive" src="assets/images/PGUIDANCE.png" alt="card-image">
                             </a>
                         </div>
                         <div class="card-body service-details">
@@ -328,7 +328,7 @@
                         <div class="card">
                             <div class="card-header p-0 position-relative border-0">
                                 <a href="services.html">
-                                    <img class="d-block img-responsive" src="assets/images/pediatric-decay.jpg" alt="card-image">
+                                    <img class="d-block img-responsive" src="assets/images/INFANTDcheck.png" alt="card-image">
                                 </a>
                             </div>
                             <div class="card-body service-details">
@@ -352,7 +352,7 @@
                                 <div class="card">
                                     <div class="card-header p-0 position-relative border-0">
                                         <a href="services.html">
-                                            <img class="d-block img-responsive" src="assets/images/aligners.webp" alt="card-image">
+                                            <img class="d-block img-responsive" src="assets/images/allign22222.png" alt="card-image">
                                         </a>
                                     </div>
                                     <div class="card-body service-details">
@@ -364,7 +364,7 @@
                                     <div class="card">
                                         <div class="card-header p-0 position-relative border-0">
                                             <a href="services.html">
-                                                <img class="d-block img-responsive" src="assets/images/Tooth-Jewelry.jpg" alt="card-image">
+                                                <img class="d-block img-responsive" src="assets/images/Toothjewllwery22222.png" alt="card-image">
                                             </a>
                                         </div>
                                         <div class="card-body service-details">
@@ -376,7 +376,7 @@
                                         <div class="card">
                                             <div class="card-header p-0 position-relative border-0">
                                                 <a href="services.html">
-                                                    <img class="d-block img-responsive" src="assets/images/fillings.jpg" alt="card-image">
+                                                    <img class="d-block img-responsive" src="assets/images/3fillings.png" alt="card-image">
                                                 </a>
                                             </div>
                                             <div class="card-body service-details">
@@ -388,7 +388,7 @@
                                             <div class="card">
                                                 <div class="card-header p-0 position-relative border-0">
                                                     <a href="services.html">
-                                                        <img class="d-block img-responsive" src="assets/images/Wisdom-Teeth.jpg" alt="card-image">
+                                                        <img class="d-block img-responsive" src="assets/images/maxilllo2323333333.png" alt="card-image">
                                                     </a>
                                                 </div>
                                                 <div class="card-body service-details">
@@ -400,7 +400,7 @@
                                                 <div class="card">
                                                     <div class="card-header p-0 position-relative border-0">
                                                         <a href="services.html">
-                                                            <img class="d-block img-responsive" src="assets/images/tmj_causes.jpg" alt="card-image">
+                                                            <img class="d-block img-responsive" src="assets/images/tmjdisorder2222222222.png" alt="card-image">
                                                         </a>
                                                     </div>
                                                     <div class="card-body service-details">
@@ -412,7 +412,7 @@
                                                     <div class="card">
                                                         <div class="card-header p-0 position-relative border-0">
                                                             <a href="services.html">
-                                                                <img class="d-block img-responsive" src="assets/images/Phase.jpg" alt="card-image">
+                                                                <img class="d-block img-responsive" src="assets/images/2ND PHASE.png" alt="card-image">
                                                             </a>
                                                         </div>
                                                         <div class="card-body service-details">
@@ -424,7 +424,7 @@
                                                         <div class="card">
                                                             <div class="card-header p-0 position-relative border-0">
                                                                 <a href="services.html">
-                                                                    <img class="d-block img-responsive" src="assets/images/southwooddentalstudio.png" alt="card-image">
+                                                                    <img class="d-block img-responsive" src="assets/images/southnorth.png" alt="card-image">
                                                                 </a>
                                                             </div>
                                                             <div class="card-body service-details">
@@ -436,7 +436,7 @@
                                                             <div class="card">
                                                                 <div class="card-header p-0 position-relative border-0">
                                                                     <a href="services.html">
-                                                                        <img class="d-block img-responsive" src="assets/images/Emergency-Dental.jpg" alt="card-image">
+                                                                        <img class="d-block img-responsive" src="assets/images/medicalbox.png" alt="card-image">
                                                                     </a>
                                                                 </div>
                                                                 <div class="card-body service-details">
@@ -448,7 +448,7 @@
                                                                 <div class="card">
                                                                     <div class="card-header p-0 position-relative border-0">
                                                                         <a href="services.html">
-                                                                            <img class="d-block img-responsive" src="assets/images/dental7.jpg" alt="card-image">
+                                                                            <img class="d-block img-responsive" src="assets/images/dmanage.png" alt="card-image">
                                                                         </a>
                                                                     </div>
                                                                     <div class="card-body service-details">
@@ -460,7 +460,7 @@
                                                                     <div class="card">
                                                                         <div class="card-header p-0 position-relative border-0">
                                                                             <a href="services.html">
-                                                                                <img class="d-block img-responsive" src="assets/images/unnamed.jpg" alt="card-image">
+                                                                                <img class="d-block img-responsive" src="assets/images/compositefillings.png" alt="card-image">
                                                                             </a>
                                                                         </div>
                                                                         <div class="card-body service-details">
@@ -472,7 +472,7 @@
                                                                         <div class="card">
                                                                             <div class="card-header p-0 position-relative border-0">
                                                                                 <a href="services.html">
-                                                                                    <img class="d-block img-responsive" src="assets/images/smile.jpg" alt="card-image">
+                                                                                    <img class="d-block img-responsive" src="assets/images/smilling.png" alt="card-image">
                                                                                 </a>
                                                                             </div>
                                                                             <div class="card-body service-details">
@@ -484,7 +484,7 @@
                                                                             <div class="card">
                                                                                 <div class="card-header p-0 position-relative border-0">
                                                                                     <a href="services.html">
-                                                                                        <img class="d-block img-responsive" src="assets/images/OPC.jpeg" alt="card-image">
+                                                                                        <img class="d-block img-responsive" src="assets/images/OPC22.png" alt="card-image">
                                                                                     </a>
                                                                                 </div>
                                                                                 <div class="card-body service-details">
