--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                                                 <li><a href="./infant-dental-checkup.html"><i
                                                             class="fa fa-angle-right"></i>Infant Dental Checkup </a>
                                                 </li>
-                                                <li><a href="./orthodentaltreatment.html"><i class="fa fa-angle-right"></i>Orthodontics Dental
+                                                <li><a href="./orthodentaltreatment.html"><i
+                                                            class="fa fa-angle-right"></i>Orthodontics Dental
                                                         Treatment</a></li>
                                                 <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
                                                             class="fa fa-angle-right"></i>Aesthetic and Cosmetic
@@ -142,11 +143,7 @@
                             <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                     </ul>
-                    <!-- <form action="#error" method="GET" class="d-flex search-header">
-                        <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
-                            required>
-                        <button class="btn btn-style" type="submit"><i class="fas fa-search"></i></button>
-                    </form> -->
+
                 </div>
                 <!-- toggle switch for light and dark theme -->
                 <div class="cont-ser-position">
@@ -183,8 +180,8 @@
                 <div class="demo-inner-content">
                     <div class="container">
                         <div class="banner-info">
-                            <h3>Welcome To</h3>
-                            <h1 class="text-white">Best Dental Hospital In Beeramguda</h1>
+                            <h1 class="text-white"> <span>Welcome
+                                    To </span> <br> Best Dental Hospital In Beeramguda</h1>
                             <a class="btn btn-style btn-style-2 mt-sm-5 mt-4" href="appointment.html">Book Now</a>
                         </div>
                     </div>
@@ -211,8 +208,8 @@
                 <div class="col-xl-5 col-lg-6 offset-xl-1 mt-lg-0 mt-5 pt-lg-0 pt-5">
                     <h3 class="title-style mb-md-5 mb-4">A Warm <span>Welcome</span> and a Beautiful <span>Smile</span>
                     </h3>
-                    <p class="sub-para">"Our clients are our priority, we offer quality dental services with a team of
-                        specialists. More details about our services below".</p>
+                    <!-- <p class="sub-para">"Our clients are our priority, we offer quality dental services with a team of
+                        specialists. More details about our services below".</p> -->
                     <p class="mt-4 pt-sm-2">Welcome to our dental clinic, where we prioritize your oral health and
                         well-being. Our experienced team of dental professionals is dedicated to providing comprehensive
                         and personalized care. From routine check-ups to specialized treatments, we strive to create a
@@ -238,20 +235,65 @@
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
                             <!-- <i class="fas fa-tooth"></i> -->
-                            <img src="./assets/images/teeethh.png" alt="" style="width: 200px;">
+                            <img src="./assets/images/teeethh.png" alt="">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Dental Implant</a></h5>
-                            <p> Dental implants can be given in a patient, if a single tooth is missing, if several teeth are missing (implant supported bridges) or if replacing all teeth (implant supported full dentures).
-                                Just like our own natural teeth, dental implants also require same care..</p>
+                            <p> Dental implants can be given in a patient, if a single tooth is missing, if several
+                                teeth are missing (implant supported bridges) or if replacing all teeth (implant
+                                supported full dentures).
+                                Just like our own natural teeth.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-md-0 mt-3">
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
+                            <!-- <i class="fas fa-crutch"></i> -->
+                            <img src="./assets/images/Teethwhitening222222.png" alt="">
+                        </div>
+                        <div class="about-content">
+                            <h5 class="mb-3"><a href="about.html">Teeth Whitening</a></h5>
+                            <p>Teeth Whitening is among the most popular cosmetic dental procedure, as it greatly
+                                improves the look of teeth.
+                                'Whitening' is not a one-time procedure, it needs to be repeated time to time.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mt-lg-0 mt-3">
+                    <div class="about-single p-3">
+                        <div class="about-icon mb-4">
+                            <!-- <i class="fas fa-user-md"></i> -->
+                            <img src="./assets/images/smilling.png" alt="">
+                        </div>
+                        <div class="about-content">
+                            <h5 class="mb-3"><a href="about.html">Smile Designing</a></h5>
+                            <p>A significant distinction between a corrective dental specialist and a general dental
+                                specialist is that a general dental specialist has been prepared to fix things, and the
+                                individual in question does that with a tyrant approach. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mt-4">
+                    <div class="about-single p-3">
+                        <div class="about-icon mb-4">
+                            <!-- <i class="fas fa-teeth-open"></i> -->
+                            <img src="./assets/images/OPC22.png" alt="">
+                        </div>
+                        <div class="about-content">
+                            <h5 class="mb-3"><a href="about.html">Orthopantomogram</a></h5>
+                            <p>An orthopantomogram (OPG), also known as a panoramic dental X-ray, is a comprehensive
+                                two-dimensional image of the entire mouth. It captures the teeth, jaws,
+                                temporomandibular joints (TMJs). </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mt-4">
+                    <div class="about-single p-3">
+
+                        <div class="about-icon mb-4">
                             <!-- <i class="fas fa-wheelchair"></i> -->
-                            <img src="./assets/images/PEDIA.png" alt="" style="width: 200px;">
+                            <img src="./assets/images/PEDIA.png" alt="">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Pediatric Dental Care</a></h5>
@@ -260,53 +302,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mt-lg-0 mt-3">
-                    <div class="about-single p-3">
-                        <div class="about-icon mb-4">
-                            <!-- <i class="fas fa-user-md"></i> -->
-                            <img src="./assets/images/smilling.png" alt="" style="width: 200px;">
-                        </div>
-                        <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">Smile Designing</a></h5>
-                            <p>A significant distinction between a corrective dental specialist and a general dental specialist is that a general dental specialist has been prepared to fix things, and the individual in question does that with a tyrant approach. </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-4">
-                    <div class="about-single p-3">
-                        <div class="about-icon mb-4">
-                            <!-- <i class="fas fa-teeth-open"></i> -->
-                            <img src="./assets/images/OPC22.png" alt="" style="width: 200px;">
-                        </div>
-                        <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">Orthopantomogram</a></h5>
-                            <p>An orthopantomogram (OPG), also known as a panoramic dental X-ray, is a comprehensive two-dimensional image of the entire mouth. It captures the teeth, jaws, temporomandibular joints (TMJs), and surrounding structures in a single image.  </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mt-4">
-                    <div class="about-single p-3">
-                        <div class="about-icon mb-4">
-                            <!-- <i class="fas fa-crutch"></i> -->
-                            <img src="./assets/images/Teethwhitening222222.png" alt="" style="width: 200px;">
-                        </div>
-                        <div class="about-content">
-                            <h5 class="mb-3"><a href="about.html">Teeth Whitening</a></h5>
-                            <p>Teeth Whitening is among the most popular cosmetic dental procedure, as it greatly improves the look of teeth.
-                                'Whitening' is not a one-time procedure, it needs to be repeated time to time.</p>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-lg-4 col-md-6 mt-4">
                     <div class="about-single p-3">
                         <div class="about-icon mb-4">
                             <!-- <i class="fas fa-teeth"></i> -->
-                            <img src="./assets/images/FAPD.png" alt="" style="width: 200px;">
+                            <img src="./assets/images/FAPD.png" alt="">
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Full And Partial Dentures</a></h5>
-                            <p>A 'Denture' is a removable replacement for missing teeth and surrounding tissues. two types of dentures are available : Complete and Partial Dentures.
-                                Complete dentures are used when all teeth are missing while Partial dentures are given, where some natural teeth remain.</p>
+                            <p>A 'Denture' is a removable replacement for missing teeth and surrounding tissues. two
+                                types of dentures are available : Complete and Partial Dentures.
+
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -320,7 +327,12 @@
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
+    <style>
+        /* .about-section .about-icon {
+            max-width: 200px;
 
+        } */
+    </style>
     <!-- home block 3 with slider -->
     <section class="w3l-index5 py-5">
         <div class="container py-md-5 py-4">
@@ -335,7 +347,8 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Root Canal Treatment</h4>
                                 </a>
-                                <p>A 'Root Canal Treatment 'is used to repair and save a tooth that is badly decayed or become infected.</p>
+                                <p>A 'Root Canal Treatment 'is used to repair and save a tooth that is badly decayed or
+                                    become infected.</p>
                                 <a href="root-canal-treatment.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -349,7 +362,8 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Dental implants</h4>
                                 </a>
-                                <p>A Dental Implant is an artificial tooth root that is placed into your jaw, to hold are placement tooth or bridge.</p>
+                                <p>A Dental Implant is an artificial tooth root that is placed into your jaw, to hold
+                                    are placement tooth or bridge.</p>
                                 <a href="dental-implants.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -363,7 +377,8 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Habbit Correction</h4>
                                 </a>
-                                <p>Many Kid's suffer from deleterious oral habit of Thumb sucking Mouth Breathing which can have a very bad effect on erupting dentition of your kids .</p>
+                                <p>Many Kid's suffer from deleterious oral habit of Thumb sucking Mouth Breathing which
+                                    can have a very bad effect on erupting dentition of your kids .</p>
                                 <a href="habit-correction.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -377,7 +392,8 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Pregnancy Guidance</h4>
                                 </a>
-                                <p>At Devansh Radiology & Imaging Clinic We understand that pregnancy is the most enjoyable time in the women's life.</p>
+                                <p>At Devansh Radiology & Imaging Clinic We understand that pregnancy is the most
+                                    enjoyable time in the women's life.</p>
                                 <a href="pregnancy-guidance.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -391,7 +407,8 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Smile Designing</h4>
                                 </a>
-                                <p> A significant distinction between a corrective dental specialist and a general dental specialist is that a general dental specialist has been prepared</p>
+                                <p> A significant distinction between a corrective dental specialist and a general
+                                    dental specialist is that a general dental specialist has been prepared</p>
                                 <a href="smile-designing.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -405,7 +422,8 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Dental Management</h4>
                                 </a>
-                                <p>Every Child is special to us whether suffering from cerebral palsy, Down syndrome, Autism etc.  </p>
+                                <p>Every Child is special to us whether suffering from cerebral palsy, Down syndrome,
+                                    Autism etc. </p>
                                 <a href="dental-management.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -437,7 +455,7 @@
                         <p class="count-text mt-sm-2">Happy Smiles</p>
                     </div>
                     <div class="counter mt-sm-5 mt-4">
-                        <div class="timer count-title count-number" data-to="13" data-speed="1500">13   </div>
+                        <div class="timer count-title count-number" data-to="13" data-speed="1500">13 </div>
                         <p class="count-text mt-sm-2">Years of experience</p>
                     </div>
                     <div class="counter mt-sm-5 mt-4">
@@ -593,7 +611,7 @@
                         <h6 class="progress-tittle">React JS </h6>
                        
                     </div> -->
-                <!-- </div>
+    <!-- </div>
                 <div class="col-lg-6 text-center">
                     <img src="assets/images/Untitled_design-removebg-preview.png" alt="" class="img-fluid">
                 </div>
