--- a/services.html
+++ b/services.html
@@ -288,7 +288,7 @@
                         </div>
                         <div class="card-body service-details">
                             <h4 href="./teeth-cleaning-scaling-and-polishing.html" class="service-heading">Teeth
-                                Cleaning (Scaling) And Polishing</h4>
+                                Cleaning And Polishing</h4>
                         </div>
                     </div>
                 </div>
@@ -367,7 +367,7 @@
                         </div>
                         <div class="card-body service-details">
                             <h4 href="./aesthetic-and-cosmetic-dental-treatment.html" class="service-heading">Aesthetic
-                                And Cosmetic Dental Treatment</h4>
+                                And Cosmetic Dental</h4>
                         </div>
                     </div>
                 </div>
@@ -442,7 +442,7 @@
                         </div>
                         <div class="card-body service-details">
                             <h4 href="./management-of-dental-traumatic-Injuries.html" class="service-heading">Management
-                                of Dental Traumatic injuries</h4>
+                                of Dental Traumatic</h4>
                         </div>
                     </div>
                 </div>
@@ -502,35 +502,18 @@
     </div>
     <!-- //serviceblock2 section -->
 
-    <!-- skills section -->
-    <!-- <section class="w3l-progress pt-5" id="progress">
-        <div class="container pt-md-5 pt-4">
-            <div class="row align-items-center">
-                <div class="col-lg-6 pe-lg-5">
-                    <div class="progress-info info1">
-                        <h6 class="progress-tittle">Orthodontics </h6>
 
-                    </div>
-                    <div class="progress-info info2">
-                        <h6 class="progress-tittle">Cosmetic Work
-                        </h6>
 
-                    </div>
-                    <div class="progress-info info3">
-                        <h6 class="progress-tittle">Implants </h6>
 
-                    </div>
-                     <div class="progress-info info4">
-                    <h6 class="progress-tittle">React JS </h6>
-                   
-                </div> -->
-    <!-- </div>
-                <div class="col-lg-6 text-center">
-                    <img src="assets/images/Untitled_design-removebg-preview.png" alt="" class="img-fluid">
-                </div>
-            </div>
-        </div>
-    </section>  -->
+
+
+
+
+
+
+
+
+
     <section class="w3l-call-to-action-6">
         <div class="container py-md-5 py-sm-4 py-5">
             <div class="d-sm-flex align-items-center justify-content-between">
@@ -550,7 +533,9 @@
         </div>
     </section>
     <!-- //call section -->
+    <style>
 
+    </style>
     <!-- footer -->
     <footer class="w3l-footer-29-main">
         <div class="footer-29 pt-5 pb-4">
