--- a/lasertreatment.html
+++ b/lasertreatment.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>v-smilez Dental Care - Services|Kondapur,Hyderabard</title>
+    <title>v-smilez Dental Care - Services</title>
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">TOOTH COLORED FILLING</h3>
+        <h3 class="title-style mb-3">Laser Treatment</h3>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -30,18 +30,17 @@
             <div class="row align-items-center">
                 <div class="col-lg-8 homeaboutblock mt-lg-0 mt-5">
                     <div class="treatment-image">
-                        <img src="./assets/images/3fillings.png"
+                        <img src="./assets/images/laser1111.png"
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>A 'Filling' is a way to restore tooth damaged by decay, for normal function and shape of teeth.
-                         A 'filling' material can be tooth colored or a metallic one .commonly used filling materials are amalgam (silver fillings), composites (tooth colored filling), GIC etc.</p>
+                        <p>Laser dental treatment represents a cutting-edge approach to oral care, offering precise and minimally invasive solutions for a range of dental issues. From cavity detection and gum disease treatment to teeth whitening and soft tissue procedures, lasers provide efficient and comfortable alternatives to traditional methods. With laser technology, procedures are often quicker, require less anesthesia, and result in faster recovery times.</p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
                             
-                            Composite fillings are tooth colored fillings, commonly used nowadays, available according to natural appearance of teeth.</p>
+                            This advanced technique also minimizes bleeding and reduces the risk of infection, promoting overall oral health. Experience the future of dentistry at our clinic, where our skilled professionals harness the power of lasers to deliver exceptional results and ensure a comfortable dental experience. Say goodbye to dental anxiety and hello to a brighter, healthier smile with laser dental treatment.</p>
                     </div>
 
                 </div>
