--- a/orthodental&Alignerstreatment.html
+++ b/orthodental&Alignerstreatment.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">ORTHO DENTAL TREATMENT</h3>
+        <h3 class="title-style mb-3">ORTHO DENTAL & Aligners TREATMENT</h3>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -69,6 +69,8 @@
                                 guidance</a></li>
                         <li><a href="./infant-dental-checkup.html"><i class="fa fa-arrow-circle-right"></i> Infant
                                 Dental Checkup</a></li>
+                         <li><a href="./orthodental&Alignerstreatment.html"><i class="fa fa-arrow-circle-right"></i> Ortho Dental & Aligners
+                                    Treatment</a></li>
                         <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
                                     class="fa fa-arrow-circle-right"></i> Aesthetic and Cosmetic Dental Treatment
                             </a></li>
@@ -93,6 +95,8 @@
                                 Designing</a></li>
                         <li><a href="./orthopantomogram.html"><i class="fa fa-arrow-circle-right"></i>
                                 Orthopantomogram</a></li>
+                        <li><a href="./lasertreatment.html"><i class="fa fa-arrow-circle-right"></i>
+                                    Laser Treatment</a></li>
                     </ul>
                 </div>
 
