--- a/root-canal-treatment.html
+++ b/root-canal-treatment.html
@@ -67,6 +67,8 @@
                                 guidance</a></li>
                         <li><a href="./infant-dental-checkup.html"><i class="fa fa-arrow-circle-right"></i> Infant
                                 Dental Checkup</a></li>
+                        <li><a href="./orthodental&Alignerstreatment.html"><i class="fa fa-arrow-circle-right"></i> Ortho Dental & Aligners
+                                    Treatment</a></li>
                         <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
                                     class="fa fa-arrow-circle-right"></i> Aesthetic and Cosmetic Dental Treatment
                             </a></li>
@@ -91,7 +93,9 @@
                                 Designing</a></li>
                         <li><a href="./orthopantomogram.html"><i class="fa fa-arrow-circle-right"></i>
                                 Orthopantomogram</a></li>
-                    </ul>
+                        <li><a href="./lasertreatment.html"><i class="fa fa-arrow-circle-right"></i>
+                                    Laser Treatment</a></li>
+                                
                 </div>
 
             </div>
