--- a/smile-designing.html
+++ b/smile-designing.html
@@ -30,7 +30,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-8 homeaboutblock mt-lg-0 mt-5">
                     <div class="treatment-image">
-                        <img src="./assets/images/smile.jpg"
+                        <img src="./assets/images/smilling.png"
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
@@ -66,6 +66,8 @@
                                 guidance</a></li>
                         <li><a href="./infant-dental-checkup.html"><i class="fa fa-arrow-circle-right"></i> Infant
                                 Dental Checkup</a></li>
+                        <li><a href="./orthodental&Alignerstreatment.html"><i class="fa fa-arrow-circle-right"></i> Ortho Dental & Aligners
+                                    Treatment</a></li>
                         <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
                                     class="fa fa-arrow-circle-right"></i> Aesthetic and Cosmetic Dental Treatment
                             </a></li>
@@ -90,6 +92,8 @@
                                 Designing</a></li>
                         <li><a href="./orthopantomogram.html"><i class="fa fa-arrow-circle-right"></i>
                                 Orthopantomogram</a></li>
+                        <li><a href="./lasertreatment.html"><i class="fa fa-arrow-circle-right"></i>
+                                    Laser Treatment</a></li>
                     </ul>
                 </div>
 
