--- a/tmj-disorder-treatment.html
+++ b/tmj-disorder-treatment.html
@@ -34,17 +34,12 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>Temporomandibular joint ( TMJ ), Is a hinge that connects your jaw to temporal bones of skull , which are in front of each ear, helps in movement of jaw.
-                        Problems with jaw and surrounding muscles in face, controlling jaw movements are known as Temporo- mandibular Disorders.</p>
+                        <p>Temporomandibular Joint (TMJ) Disorder, often abbreviated as TMD, refers to a condition affecting the jaw joint and muscles that control jaw movement. Symptoms may include jaw pain, clicking or popping noises when chewing, difficulty opening or closing the mouth fully, and even headaches or earaches. TMJ disorders can be caused by various factors such as teeth grinding, jaw clenching, arthritis, or injury to the jaw. </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            
-                            Causes of such problems are :
-1.Injury to jaw, joint or muscles of head and neck.
-2.Grinding or clenching of teeth
-3.Arthritis in joint.</p>
+                            Treatment options range from self-care practices like applying ice packs and practicing relaxation techniques to more advanced interventions such as dental splints, physical therapy, or in severe cases, surgery. Seeking professional evaluation and treatment is essential for managing TMJ disorder and improving quality of life.</p>
                     </div>
 
                 </div>
@@ -71,6 +66,8 @@
                                 guidance</a></li>
                         <li><a href="./infant-dental-checkup.html"><i class="fa fa-arrow-circle-right"></i> Infant
                                 Dental Checkup</a></li>
+                         <li><a href="./orthodental&Alignerstreatment.html"><i class="fa fa-arrow-circle-right"></i> Ortho Dental & Aligners
+                                    Treatment</a></li>
                         <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
                                     class="fa fa-arrow-circle-right"></i> Aesthetic and Cosmetic Dental Treatment
                             </a></li>
@@ -95,6 +92,8 @@
                                 Designing</a></li>
                         <li><a href="./orthopantomogram.html"><i class="fa fa-arrow-circle-right"></i>
                                 Orthopantomogram</a></li>
+                        <li><a href="./lasertreatment.html"><i class="fa fa-arrow-circle-right"></i>
+                                    Laser Treatment</a></li>
                     </ul>
                 </div>
 
