--- a/footer.html
+++ b/footer.html
@@ -9,6 +9,7 @@
 
 <body>
     <!-- call section -->
+    <!-- call section -->
     <section class="w3l-call-to-action-6">
         <div class="container py-md-5 py-sm-4 py-5">
             <div class="d-sm-flex align-items-center justify-content-between">
@@ -19,7 +20,9 @@
                 <div class="right-content-call mt-sm-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+918187835489">+918187835489</a>
+                            <a class="call-style-w3" href="tel:+918187835489">+918187835489 /</a>
+                            <a class="call-style-w3" href="tel:+918297721721">+918297721721</a>
+                           
 
                         </li>
                         <li><a href="appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a> </li>
@@ -29,6 +32,7 @@
         </div>
     </section>
     <!-- //call section -->
+
     <!-- footer -->
     <footer class="w3l-footer-29-main">
         <div class="footer-29 pt-5 pb-4">
@@ -39,7 +43,7 @@
                         <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda kamman, Mallikarjuna Nagar,
                             Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+918187835489">+91 8187835489</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+918187835489">+91 8187835489 / +91 8297721721</a></p>
                         <p class="mb-2">Email : <a href="mailto:vsmilez.dental@gmail.com">vsmilez.dental@gmail.com</a>
                         </p>
                     </div>
@@ -83,7 +87,7 @@
                     </div>
                 </div>
                 <!-- copyright -->
-                <p class="copy-footer-29 text-center pt-lg-2 mt-1 pb-2">© 2024 V-Smilez Dental. All rights reserved.
+                <p class="copy-footer-29 text-center pt-lg-2 mt-1 pb-2">Copy rights © 2024 V-Smilez Dental. All rights reserved.
                     Design by
                     <a href="https://www.thepatternscompany.com/" target="_blank">
                         The Patterns Company</a>
@@ -99,15 +103,111 @@
     <button onclick="topFunction()" id="movetop" title="Go to top">
         <span class="fas fa-level-up-alt" aria-hidden="true"></span>
     </button>
+    <script>
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () {
+            scrollFunction()
+        };
 
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("movetop").style.display = "block";
+            } else {
+                document.getElementById("movetop").style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
     <!-- //move top -->
 
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen">
-        <img src="./assets/images/logo_icon.png" alt="" style="width:150px;" />
-        <div class="loader"></div>
-    </div>
-    <!--loader-->
+    <!-- common jquery plugin -->
+    <script src="assets/js/jquery-3.3.1.min.js"></script>
+    <!-- //common jquery plugin -->
+
+    <!-- for services carousel slider -->
+    <script src="assets/js/owl.carousel.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.owl-three').owlCarousel({
+                loop: true,
+                stagePadding: 20,
+                margin: 20,
+                autoplay: true,
+                autoplayTimeout: 5000,
+                autoplaySpeed: 1000,
+                autoplayHoverPause: false,
+                nav: false,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 2
+                    },
+                    991: {
+                        items: 3
+                    },
+                    1200: {
+                        items: 4
+                    }
+                }
+            })
+        })
+    </script>
+    <!-- //for services carousel slider -->
+
+    <!-- theme switch js (light and dark)-->
+    <script src="assets/js/theme-change.js"></script>
+    <!-- //theme switch js (light and dark)-->
+
+    <!-- MENU-JS -->
+    <script>
+        $(window).on("scroll", function () {
+            var scroll = $(window).scrollTop();
+
+            if (scroll >= 80) {
+                $("#site-header").addClass("nav-fixed");
+            } else {
+                $("#site-header").removeClass("nav-fixed");
+            }
+        });
+
+        //Main navigation Active Class Add Remove
+        $(".navbar-toggler").on("click", function () {
+            $("header").toggleClass("active");
+        });
+        $(document).on("ready", function () {
+            if ($(window).width() > 991) {
+                $("header").removeClass("active");
+            }
+            $(window).on("resize", function () {
+                if ($(window).width() > 991) {
+                    $("header").removeClass("active");
+                }
+            });
+        });
+    </script>
+    <!-- //MENU-JS -->
+
+    <!-- disable body scroll which navbar is in active -->
+    <script>
+        $(function () {
+            $('.navbar-toggler').click(function () {
+                $('body').toggleClass('noscroll');
+            })
+        });
+    </script>
+    <!-- //disable body scroll which navbar is in active -->
+
+    <!-- bootstrap -->
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- //bootstrap -->
+    <!-- //Js scripts -->
 </body>
 
 </html>
