--- a/about.html
+++ b/about.html
@@ -194,10 +194,6 @@
                     <h3 class="title-style mb-3">Welcome to <span>V-Smilez Dental</span></h3>
                     <p>Welcome to our premier V-Smilez Dental Clinic where your smile is our priority! Our expert team of dentists is dedicated to providing you with personalized and compassionate care. From routine cleanings to advanced procedures, we offer comprehensive dental services tailored to meet your unique needs. With state-of-the-art facilities and cutting-edge technology, we ensure the highest standards of safety and efficiency. Experience exceptional dental care in a comfortable and welcoming environment. Schedule your appointment today and let us help you achieve optimal oral health and a radiant smile!
 
-
-
-
-
                     </p>
                     <div class="mt-4">
                         <ul class="service-list">
@@ -210,7 +206,7 @@
 
                 </div>
                 <div class="col-lg-6 homeaboutblock mt-lg-0 mt-5">
-                    <img src="assets/images/about.jpg" class="img-fluid radius-image" alt="image">
+                    <img src="assets/images/mam photos.png" class="img-fluid radius-image" alt="image" Style="width:520px;">
                 </div>
                 <div class="col-12">
                     <p>With state-of-the-art technology and the latest advancements in dental techniques, we offer a
