--- a/gallery.html
+++ b/gallery.html
@@ -246,6 +246,21 @@
                                 <img src="./assets/images/treatment-area.jpg" alt="" />
 
                             </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/vsmile1.jpg" alt="" />
+
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/vsmile3.jpg" alt="" />
+
+                            </div>
+                            <div class="col-sm-4 g">
+
+                                <img src="./assets/images/vsmile4.jpg" alt="" />
+
+                            </div>
 
 
                         </div>
@@ -307,7 +322,7 @@
                             <div class="col-sm-4 v">
 
                                 <video width="300" height="300" controls>
-                                    <source src="./assets/images/video3.mp4" type="video/mp4">
+                                    <source src="./assets/images/video3.mp4" type="video/mp4" >
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -315,6 +330,22 @@
 
                                 <video width="300" height="300" controls>
                                     <source src="./assets/images/video2.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+
+                            </div>
+                            <div class="col-sm-4 v">
+
+                                <video width="300" height="300" controls>
+                                    <source src="./assets/images/vsmilevideo.jpg.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+
+                            </div>
+                            <div class="col-sm-4 v">
+
+                                <video width="300" height="300" controls>
+                                    <source src="./assets/images/vsmile2.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
 
