--- a/about.html
+++ b/about.html
@@ -195,14 +195,14 @@
                     <p>Welcome to our premier V-Smilez Dental Clinic where your smile is our priority! Our expert team of dentists is dedicated to providing you with personalized and compassionate care. From routine cleanings to advanced procedures, we offer comprehensive dental services tailored to meet your unique needs. With state-of-the-art facilities and cutting-edge technology, we ensure the highest standards of safety and efficiency. Experience exceptional dental care in a comfortable and welcoming environment. Schedule your appointment today and let us help you achieve optimal oral health and a radiant smile!
 
                     </p>
-                    <div class="mt-4">
+                    <!-- <div class="mt-4">
                         <ul class="service-list">
                             <li class="service-link"><a href="#url"><i class="fas fa-check-circle"></i>Exceptional
                                     Service</a></li>
                             <li class="service-link"><a href="#url"><i class="fas fa-check-circle"></i>Soft & Gentle</a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
 
                 </div>
                 <div class="col-lg-6 homeaboutblock mt-lg-0 mt-5">
@@ -479,6 +479,20 @@
                         <div class="team-bottom-block p-4">
                             <h5 class="member mb-1"><a href="#team">Dr. MVS Sudhir</a></h5>
                             <small>Cosmetic Dental Surgeon & Implantologist</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
+                    <div class="team-block-single">
+                        <div class="team-grids">
+                            <a href="#team-single">
+                                <img src="/assets/images/lady doctor111.png" class="img-fluid" alt="">
+
+                            </a>
+                        </div>
+                        <div class="team-bottom-block p-4">
+                            <h5 class="member mb-1" style="color: #000000;"><a href="#team">Dr. Jayanthi</a></h5>
+                            <small>Pedodontist</small>
                         </div>
                     </div>
                 </div>
